# eos-eac-example-game-public

./: .gitignore  README.md
client/: CMakeLists.txt  build.sh  run.sh
client/SDK/Tools/devtools/: anticheat_integritytool  anticheat_integritytool.cfg  base_private.key  base_public.cer
client/src/: comms.cpp  comms.h  eac.cpp  eac.h  game.cpp  game.h  main.cpp
server/: CMakeLists.txt  build.sh  run.sh
server/src/: comms.cpp  comms.h  eac.cpp  eac.h  main.cpp
